snapzy/infra/k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snapzy-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: snapzy-web
  template:
    metadata:
      labels:
        app: snapzy-web
    spec:
      containers:
        - name: web
          image: ghcr.io/ORG/REPO/web:latest # TODO set org/repo
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: snapzy-web
spec:
  selector:
    app: snapzy-web
  ports:
    - port: 80
      targetPort: 3000
